fixed the navigation position when collapsed

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -11,6 +11,8 @@ nav {
         font-size: 2.4rem;
     }
     &.collapsed {
+        position: fixed;
+        width: @container-max-width-val;
         #menu {
             display: none;
         }
